# sample_project

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/workflows/: api.yml  ci.yml
app/adapters/api/: __init__.py  main.py
app/adapters/api/routers/: item_router.py
app/adapters/repository/: sql_repository.py
app/config/: database.py  settings.py
app/domain/: models.py  repository.py  schemas.py
tests/unit/: test_models.py  test_schemas.py  test_sql_repository.py
