[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = ""
authors = ["Vadim Surin <7uperior@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
sqlalchemy = "^1.4.31"
pydantic = "^1.9.0"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pytest-asyncio = "^0.23.5.post1"
httpx = "^0.27.0"
pytest-cov = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"